cleaing code and documentation

--- a/asr/cv-decode.ipynb
+++ b/asr/cv-decode.ipynb
@@ -109,7 +109,7 @@
    "id": "c6ec7267",
    "metadata": {},
    "source": [
-    "# Main - Manual"
+    "# Main - Manual (to speed things up)"
    ]
   },
   {
