--- a/asr/main_api_testing.ipynb
+++ b/asr/main_api_testing.ipynb
@@ -2,37 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "111a3ec3",
-   "metadata": {},
-   "source": [
-    "# Pip install"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac390918",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install flask transformers torchaudio soundfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a72b159",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "52e16398",
    "metadata": {},
    "source": [
-    "# Testing\n",
-    "- My laptop is too old to run the large model"
+    "# Testing"
    ]
   },
   {
@@ -180,12 +153,6 @@
    "source": [
     "curl -F \"file=@C:/Users/Featherine/Downloads/HTX xData Assignment/asr/sample.mp3\" http://localhost:8001/asr\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a3559ca5",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
