--- a/main_build_docker.ipynb
+++ b/main_build_docker.ipynb
@@ -34,9 +34,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "docker system prune -a --volumes\n",
-    "docker images\n",
-    "docker ps"
+    "# docker system prune -a --volumes\n",
+    "# docker images\n",
+    "# docker ps"
    ]
   },
   {
