--- a/asr-train/cv-train-2a.ipynb
+++ b/asr-train/cv-train-2a.ipynb
@@ -2,26 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "555d7dcd",
-   "metadata": {},
-   "source": [
-    "# Pip install"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "baa567f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install transformers datasets torchaudio jiwer\n",
-    "# !pip install transformers[torch]\n",
-    "# !pip install librosa"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2e7dea9e",
    "metadata": {},
    "source": [
@@ -473,19 +453,8 @@
     "# tokenizer = Wav2Vec2CTCTokenizer(\"./vocab.json\", unk_token=\"[UNK]\", pad_token=\"[PAD]\", word_delimiter_token=\"|\")\n",
     "# processor = Wav2Vec2Processor(feature_extractor=feature_extractor, tokenizer=tokenizer)\n",
     "\n",
-    "# Load the fine-tuned model\n",
-    "# processor = Wav2Vec2Processor.from_pretrained(\"./wav2vec2-base-960-cv\")\n",
-    "# tokenizer = Wav2Vec2Tokenizer.from_pretrained(\"./wav2vec2-base-960-cv\")\n",
-    "# model = Wav2Vec2ForCTC.from_pretrained(\"./wav2vec2-base-960-cv\")\n",
-    "\n",
-    "# processor = Wav2Vec2Tokenizer.from_pretrained(\"/wav2vec2-base-960h-cv\")\n",
-    "# model = Wav2Vec2ForCTC.from_pretrained(\"/wav2vec2-base-960h-cv\")\n",
     "\n",
     "model_name = \"./wav2vec2-base-960h-cv\"\n",
-    "# model_name = \"facebook/wav2vec2-large-960h\"\n",
-    "# processor = Wav2Vec2Tokenizer.from_pretrained(model_name)\n",
-    "# model = Wav2Vec2ForCTC.from_pretrained(model_name)\n",
-    "\n",
     "tokenizer = Wav2Vec2Tokenizer.from_pretrained(model_name)\n",
     "model = Wav2Vec2ForCTC.from_pretrained(model_name)\n",
     "model.eval()\n",
@@ -527,6 +496,14 @@
    "outputs": [],
    "source": [
     "input_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87d9ff76",
+   "metadata": {},
+   "source": [
+    "# Get results"
    ]
   },
   {
