--- a/hotword-detection/cv-hotword-5a.ipynb
+++ b/hotword-detection/cv-hotword-5a.ipynb
@@ -157,11 +157,19 @@
     "\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9550bd99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -175,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
